kubernetes/apps/media/plex/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: plex
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: plex
  ingress:
    # plex-addons
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: plex-auto-languages
            k8s:io.kubernetes.pod.namespace: media
        - matchLabels:
            app.kubernetes.io/name: plex-image-cleanup
            k8s:io.kubernetes.pod.namespace: media
        - matchLabels:
            app.kubernetes.io/name: plex-trakt-sync
            k8s:io.kubernetes.pod.namespace: media
        - matchLabels:
            app.kubernetes.io/name: tautulli
            k8s:io.kubernetes.pod.namespace: media
        - matchLabels:
            app.kubernetes.io/name: jellyseerr
            k8s:io.kubernetes.pod.namespace: downloads
        - matchLabels:
            app.kubernetes.io/name: notifiarr
            k8s:io.kubernetes.pod.namespace: downloads
        - matchLabels:
            app.kubernetes.io/name: overseerr
            k8s:io.kubernetes.pod.namespace: downloads
        - matchLabels:
            app.kubernetes.io/name: home-assistant
            k8s:io.kubernetes.pod.namespace: home-automation
        - matchLabels:
            app.kubernetes.io/name: maintainerr
            k8s:io.kubernetes.pod.namespace: downloads
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
